<resources>

    <string name="app_name">XYZ Reader</string>
    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="up">Up</string>

    <string name="subhead">Sub Heading</string>
    <string name="byline">Byline</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat blandit aliquam etiam erat velit scelerisque in.</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="not_available">N/A</string>
    <string name="article_font_path" translatable="false">Rosario-Regular.ttf</string>

    <!-- Note: to be parsed by MessageFormat, play particular attention to quotes -->
    <string name="article_share_text">{0} by {1}"</string>
    <string name="article_list_subtitle">{0}&lt;br/&gt; by &lt;i&gt;{1}&lt;/i&gt;"</string>
    <string name="article_detail_subtitle">{0} by &lt;i&gt;{1}&lt;/i&gt;</string>

    <string name="unavailable">Unavailable</string>
    <string name="no_response">No response received.\nPlease check the network state.</string>
    <string name="invalid_response">Invalid response received.\nPlease try again later.</string>
    <string name="network_na">Network unavailable.\nPlease check Wifi and/or mobile data settings.</string>
    <string name="cant_contact_server">Unable to contact server.\nPlease check Wifi and/or mobile data settings.</string>
    <string name="unauthorised_access">Server access is not authorised.</string>
    <string name="retry">Retry</string>

</resources>
