<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/appbar_elevation"
        android:theme="@style/Theme.Bacon.AppBar"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/detail_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:theme="@style/Theme.Bacon.ToolBar"
            >

            <!--suppress AndroidLintContentDescription -->
            <com.example.xyzreader.ui.DynamicHeightImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:background="@color/photo_placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/photo_background_protection" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:theme="@style/Theme.Bacon.ToolBar"
                app:layout_collapseMode="pin">
            <!--app:popupTheme="@style/Theme.Bacon.ToolBar"-->


                <ImageButton
                    android:theme="@style/Theme.Bacon.AppBar"
                    android:id="@+id/action_up"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/up"
                    android:src="@drawable/ic_arrow_back" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <com.example.xyzreader.ui.MaxWidthLinearLayout
            android:id="@+id/meta_bar_container"
            android:orientation="vertical"
            android:layout_width="@dimen/detail_card_max_width"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:maxWidth="@dimen/detail_card_max_width"
            android:background="@color/detail_metabar_container_background"
            android:elevation="2dp">
            <!--android:layout_marginTop="@dimen/detail_card_top_margin">-->

            <LinearLayout
                android:id="@+id/meta_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:background="@color/detail_metabar_background"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:paddingLeft="@dimen/detail_inner_horiz_margin"
                android:paddingRight="@dimen/detail_inner_horiz_margin"
                android:paddingTop="@dimen/detail_metabar_vert_padding"
                android:paddingBottom="@dimen/detail_metabar_vert_padding"
                android:layout_marginBottom="@dimen/detail_metabar_vert_padding">

                <TextView
                    android:id="@+id/article_title"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                    android:fontFamily="sans-serif-condensed"
                    tools:textColor="@color/detail_metabar_text"
                    android:background="@android:color/transparent"
                    android:textStyle="bold"
                    tools:text="@string/subhead"
                    android:textSize="@dimen/detail_title_text_size"
                    android:lineSpacingMultiplier="@fraction/detail_title_line_spacing_multiplier" />

                <TextView
                    android:id="@+id/article_byline"
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/byline"
                    android:background="@android:color/transparent"
                    tools:textColor="@color/detail_metabar_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/article_body"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                android:paddingBottom="@dimen/detail_body_bottom_margin"
                tools:text="@string/lorem_ipsum"
                android:textColor="@color/detail_article_text"
                android:textColorLink="@color/appColorAccent"
                android:textSize="@dimen/detail_body_text_size"
                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />

        </com.example.xyzreader.ui.MaxWidthLinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share_fab"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:fabSize="normal"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_share"
        app:layout_anchor="@id/scrollview"
        app:layout_anchorGravity="bottom|right|end"
        app:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        android:contentDescription="@string/action_share" />

</android.support.design.widget.CoordinatorLayout>
